# Pick-and-Deliver-Objects

./: README.md
face_detection/scripts/: face.py
gesture_detection/: package.xml
gesture_detection/scripts/: gesture.py
msg_srv/: CMakeLists.txt  package.xml
msg_srv/msg/: Coordinates_3D.msg  done_pick.msg  face_message.msg
msg_srv/srv/: DesiredObject.srv
object_detection/: CMakeLists.txt  package.xml
object_detection/launch/: from2to3.launch  pick_simulation.launch
object_detection/src/: from2Dto3D_0.cpp  from2dto3d.cpp  from2dto3d_2.cpp
pics/: .gitattributes
robot_speaking/: package.xml
robot_speaking/scripts/: .say.py.swp
robot_voice/config/: complex_tiago.log_pronounce  complex_tiago.txt  complex_tiago.vocab  final_commands.dic  final_commands.lm  final_commands.sent  new_commands.dic  new_commands.log_pronounce  new_commands.sent  new_commands.vocab  third_try.txt  tiago_commands.dic  tiago_commands.lm  tiago_commands.sent  zzz.log_pronounce  zzz.vocab
src/face_detection/: CMakeLists.txt  package.xml
src/gesture_detection/: CMakeLists.txt
src/msg_srv/msg/: current_position.msg  done.msg
src/msg_srv/srv/: desired3D_pos.srv  desired_position.srv
src/object_detection/src/: from2Dto3D_1.cpp  from2dto3d_3.cpp
src/robot_speaking/scripts/: say.py
src/robot_voice/config/: command_final.txt  complex_tiago.dic  complex_tiago.lm  complex_tiago.sent  final_commands.log_pronounce  final_commands.vocab  new_commands.lm  tiago_commands.log_pronounce  tiago_commands_new.txt  zzz.dic  zzz.lm  zzz.sent
src/state_machine/launch/: python_node.launch  speech4localization.launch
src/state_machine/rviz_config/: config_lab.rviz  config_lab1.rviz
src/state_machine/scripts/: construct_sm_2.py  construct_state_machine.py  construct_statemachine1.py  state_machine_simple.py  test_shutdown.py
src/state_machine/src/: manip_octomap_service.cpp  navigation_server.cpp  navigation_server1.cpp
state_machine/: CMakeLists.txt  package.xml
state_machine/include/final_state_machine/: state_machine.h
state_machine/launch/: final.launch  newtest.launch  state_machine.launch  test.launch
state_machine/scripts/: aaa.py  grasping_client.py  python_state_machine.py  test_launch.py
state_machine/src/: final_state_macine.cpp  graspinglient.cpp  machine_clients.cpp
state_maschine/: CMakeLists.txt  package.xml
state_maschine/config/: pick_and_place_params.yaml
state_maschine/config/rviz/: tiago_pick_demo.rviz
state_maschine/include/state_maschine/: state_mashine.h
state_maschine/launch/: moveit_tiago.launch  octomap_test.launch  pick_demo.launch  state_machine.launch
state_maschine/scripts/: pick_and_place_server.py  pick_client.py
state_maschine/src/: from2Dto3D.cpp  graspinglient.cpp  manip_octomap_service.cpp  maschine_clients.cpp  simple_navigation_goals.cpp  state_maschine.cpp
