<?xml version="1.0"?>
<package>
  <name>gesture_detection</name>
  <version>1.0.0</version>
  <description>detect the gesture</description>

  <maintainer email="weiqiluo0213@outlook.com">Weiqi Luo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>final_msg_srv</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>final_msg_srv</run_depend>

</package>
