<?xml version="1.0"?>
<package>
  <name>say_something</name>
  <version>2.0.1</version>
  <description>The say_something package let tiago speak</description>

  <maintainer email="weiqiluo0213@outlook.com">Weiqi Luo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>pal_interaction_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
